--- a/otherpages/about.html
+++ b/otherpages/about.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About - Tiffany Zhu</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>About - Tiffany Zhu</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Overpass|Permanent+Marker" rel="stylesheet">
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Animate on Scroll libraries: https://michalsnik.github.io/aos/ -->
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="../assets/stylesheet.css">
 </head>
 
 
+<!-- Loading animation -->
+<body onload="initAOS()">
 
-  <body onload="initAOS()">
-
-      <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
-        <div class="navbar">
-        <div class="dropdown">
-        <button class="dropbtn">Work</button>
-            <div class="dropdown-content">
-              <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
-              <a href="../debugger/debugger.html">Debugger</a>
-              <a href="#">Chronicle</a>
-            </div>
-        </div>
-        <a href="../otherpages/about.html">
-            <div>About</div>
-        </a>
-    </div>
+  <a href="../otherpages/index2.html"><div class="name-title">Tiffany Zhu</div></a>
+  <div class="navbar">
+  <div class="dropdown">
+  <button class="dropbtn">Work</button>
+      <div class="dropdown-content">
+        <a href="../knowyourself/knowyourself.html">Project Know Yourself</a>
+        <a href="../debugger/debugger.html">Debugger</a>
+        <a href="#">Chronicle</a>
+      </div>
+  </div>
+  <a href="../otherpages/about.html">
+      <div>About</div>
+  </a>
+  </div>
 
 
   <h1>About Me</h1>
   <br>
-
   <div class="row">
     <div class="column left" data-aos="fade-right">
         <h1 class="header"><img src="../images/general/headshot.png" id="headshot"></h1>
@@ -124,6 +124,5 @@
   </body>
 
     <script type="text/javascript" src="../assets/main.js"></script>
-
 
 </html>
